MODBULKOPS-7 - DataProcessor